styles.css
:root {
  --config-background: hsl(0, 0%, 15%);
  --control-background: hsl(0, 0%, 65%);
}

html {
  background: url(assets/images/background.jpg) no-repeat center center fixed;
  background-size: cover;
  background-color: #1e1e1e;
  color: lightgray;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}


blocksatz {
  text-align: center;
}
.blocksatz {
  hyphens: auto;
  text-align: justify; /* für Edge */
  -moz-text-align-last: justify; /* für Firefox vor 58.0 */
  text-align-last: justify;
}
button {
  background-color: yellow;
}

button:hover {
  background-color: orange;
}

button:focus {
  background-color: red;
}

a {
  color: orange;
}

a.button {
  color: green;
  text-decoration: none;
}

a:visited {
  color: rgb(173, 8, 8);
}

a:active {
  color: rgb(9, 11, 161);
}

input[type="text"] {
  border: none;
  margin: 8px;
  height: 1.5rem;
}

.content {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 600px;
}

.panel {
  width: 600px;
}

.ship {
  font-size: xx-large;
  font-family: Georgia, sans-serif;
  font-weight: bold;
  text-decoration-line: underline;
  text-decoration-style: double;
  text-decoration-color: rgb(129, 0, 0);
  color: rgb(208, 255, 0);
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed; top: 30%; left: 46%;
  
  margin: -50px 0 0 -50px;
}

.control {
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}

button {
  background-color: var(--control-background);
  border: none;
  color: rgba(0, 0, 0, 0.685);
  padding: 4px 8px;
  margin: 1px;
}

select {
  padding: 4px 3px;
  margin: 3px;
  border: none;
  background-color: var(--control-background);
}

.button:hover {
  background-color: #3e8e41;
}
.config-panel {
  margin: 1rem;
  padding: 1rem;
  position: absolute;
  background-color: var(--config-background);
  width: 600px;
  box-shadow: rgba(0, 0, 0, 0.9) 0px 22px 70px 4px;
}
button.go {
  position: fixed; top: 50%; left: 50%;
  background-image: url("assets/images/button_go.png");
  border-radius: 108px;
  border: -1px double #cccccc;
  color: #eeeeee;
  padding: 0px;
  width: 108px;
  height: 108px;
  transition: all 0.5s;
  cursor: pointer;
  margin: -50px 0 0 -50px;
}

button.go:disabled {
  position: fixed; top: 50%; left: 50%;
  background-image: url("assets/images/radar.gif");
  border-radius: 108px;
  border: 1px double #cccccc;
  color: #eeeeee;
  padding: 0px;
  width: 108px;
  height: 108px;
  transition: all 0.5s;
  cursor: pointer;
  margin: -50px 0 0 -50px;
}

/*Hover button added by Graf_d*/

.toggelConfigButton {
  background-color: transparent;
  border: none;
  font-size: 1rem;
  color: white;
}

.config-section {
  display: flex;
  align-items: center;
  padding: 1rem;
  margin-bottom: 1rem;
  background-color: hsl(0, 0%, 20%);
}

.ship-config {
  padding: 1rem;
  margin-bottom: 1rem;
  background-color: hsl(0, 0%, 20%);
}

.ship-list {
  margin-bottom: 1rem;
  padding: 1rem;
  background-color: hsl(0, 0%, 20%);
}

.config-header {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--config-background);
}

.config-search {
  margin-top: 1rem;
  padding: 1rem;
  margin-bottom: 0.5rem;
  height: 30px;
  background-color: hsl(0, 18%, 22%);
}

.highlighted-row {
  background-color: hsl(0, 44%, 30%);
}

div.ship-list > table > thead > tr > th {
  cursor: pointer;
}

body {
  margin: 0;
  font-family: sans-serif;
  line-height: 1.5;
}

.wrapper {
  display: flex;
  height: 100vh;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  width: 600px;
  overflow: auto;
}

.main {
  flex-grow: 1;
  padding: 20px;
  overflow-y: auto;
}

.side-panel-toggle {
  width: 40px;
  height: 40px;
  flex-shrink: 0;
  display: grid;
  place-items: center;

  color: #ffffff;
  background: rgb(64, 66, 87);
  border: none;
  border-radius: 5px 0 0 5px;
  outline: none;
  cursor: pointer;
}

.side-panel-toggle:hover {
  background: #08df25;
}

.sp-icon-close {
  display: none !important;
}

.side-panel {
  display: none;
  width: 400px;
  height: 480px;
  flex-shrink: 0;
  padding: 20px;
  color: #ffffff;
  background: rgb(22, 94, 153);
  box-shadow: 0 0 20px rgba(0, 0, 0, 1.35);
}

.side-panel-open .side-panel {
  display: initial;
}

.side-panel-open .sp-icon-open {
  display: none !important;
}

.side-panel-open .sp-icon-close {
  display: initial !important;
}
.button {
  background-color: #003a91; /* Grün */
  border: none;
  color: white;
  padding: 15px 22px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 12px;
  margin: 4px 2px;
  cursor: pointer;
}

.button:hover {
  background-color: #3e8e41;
}

